# Algo-Trader

./: README.md  index.html  manifest.json
AlgoTradingNSEFO/: README.md  pyproject.toml
AlgoTradingNSEFO/config/: strategy.yaml
AlgoTradingNSEFO/data/: sample_backtest_data.csv
AlgoTradingNSEFO/logs/: trades.csv
AlgoTradingNSEFO/results/: backtest_summary.json
AlgoTradingNSEFO/src/: __init__.py  app.py
AlgoTradingNSEFO/src/backtest/: __init__.py  backtest_engine.py  metrics.py
AlgoTradingNSEFO/src/broker/: __init__.py
AlgoTradingNSEFO/src/core/: __init__.py  clock.py  config.py  retry.py  types.py
AlgoTradingNSEFO/src/data/: __init__.py  providers_mock.py
AlgoTradingNSEFO/src/strategy/: __init__.py  engine.py  rules.py  state.py
AlgoTradingNSEFO/src/utils/: __init__.py  csv_logger.py
AlgoTradingNSEFO/tests/: test_clock.py  test_csv_logger.py  test_rules.py  test_state.py
backend/: README_BACKEND.md  main.py  requirements.txt
